# market-analyst

./: .env.example  .gitignore  CLAUDE.md  README.md  pyproject.toml
.claude/commands/: update-claude-md.md
.claude/skills/debug/: SKILL.md
.claude/skills/implement/: SKILL.md
.claude/skills/research/: SKILL.md
app/: config.py
app/analysis/: fundamentals.py  pipeline.py  price_action.py
app/api/: routes.py  server.py
app/cli/: main.py
app/clients/: alpha_vantage.py  ollama.py
app/db/: database.py
app/paper_trading/: executor.py  feedback.py  news_guard.py  portfolio.py  pre_trade.py  scanner.py  watchlist.py
app/static/: index.html
app/static/css/: styles.css
app/static/js/: api.js  app.js  components.js  transitions.js
docs/superpowers/plans/: 2026-04-05-ui-redesign.md
docs/superpowers/specs/: 2026-04-05-ui-redesign-design.md
research/: academic_evidence_price_action.md  backtesting_best_practices.md  price_action_trading_research.md
tests/: conftest.py  test_api.py  test_e2e.py  test_price_action.py
validation/: backtest.py  cases.py  data_loader.py  indicators.py  llm.py  metrics.py  prompts.py  run.py  scorer.py  strategies.py
